2004-08-20  Brian Kahne  <bkahne@ibmoto.com>

	* minicc: Added type-checking and flow-control analysis passes.
	These are done in parallel across all top-level items in a
	translation unit.

2004-08-19  Brian Kahne  <bkahne@ibmoto.com>

	* minicc: Fixed bug: I wasn't calling setinfo on all of the Node
	objects that I should have, in cparser.yy.

	* minicc: Added symbol-table generation.  I decided to remove the
	double-dispatch stuff, because it really doesn't work that well
	(refer to "More Effective C++" for why the double-virtual function
	call is not an idea solution).  Instead, I'm just using
	single-dispatch with virtual functions in the Node class.

2004-08-18  Brian Kahne  <bkahne@ibmoto.com>

	* minicc: AST generation seems to be working; added regressions to
	test this.

2004-08-11  Brian Kahne  <bkahne@ibmoto.com>

	* minicc:  Initial AST code done.

2004-08-10  Brian Kahne  <bkahne@ibmoto.com>

	* Modified lemon so that its suffix is .cc
	
	* minicc: Integrated in C grammar from mini-C.  I'm able to parse
	the example C program provided by that program.

2004-08-09  Brian Kahne  <bkahne@ibmoto.com>

	* Added the lemon parser generator.  The source can be obtained
	from here:  

		http://www.hwaci.com/sw/lemon/

	A tutorial can be obtained from here:

		http://sourceforge.net/project/showfiles.php?group_id=79320&package_id=124528

	* minicc:  Added a parsing class, which wraps a lemon parser.
	Proof-of-concept lemon parser created which just parses simple
	mathematical expressions.  It runs in its own thread and gets
	tokens from the tokenizer thread.

	* minicc: Implemented the tokenizer stage for the compiler.
	
	* minicc: Started on an example multithreaded C compiler.  The
	basic architecture will be:

	1.  Tokenizer implemented using flex.  This passes tokens via a
	channel to the parser.

	2.  Parser implemented with lemon.  This creates an AST and a
	symbol-table.  When a function has been completed, a
	code-generator thread will be dispatched.
