@@ -9,10 +9,13 @@
 #include <iosfwd>
 #include <vector>
 
-#include "Types.h"
+#include "gc_cpp.h"
+#include "gc_allocator.h"
 
 struct Tokens;
 class Node;
+
+typedef std::vector<Node *,traceable_allocator<Node *> > Nodes;
 
 // Wrapper class.  The copy-constructor is shallow
 // and there is no destructor b/c allocation is garbage collected.
@@ -37,7 +40,11 @@ public:
   // Stores a translation unit AST.
   void add_translation_unit(Node *);
 
-  Nodes &translationUnits() { return _asts; };
+  // Print all ASTs.
+  void print_ast_list(std::ostream &,bool printsyms);
+
+  // Returns last unit added.
+  Node *lastUnit() { return _asts.back(); };
 
 private:
   void *_parser;  // The parser (opaque type generated by Lemon).
