@@ -10,9 +10,11 @@
 #include "gc_cpp.h"
 #include "gc_allocator.h"
 
-class Node;
+// Used for spawning off threads and then collecting up their results
+// when needed.
+typedef plasma::Result<bool> CompRes;
+typedef std::vector<CompRes,traceable_allocator<CompRes> > Results;
 
-typedef std::vector<Node *,traceable_allocator<Node *> > Nodes;
 
 #endif
 
